--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     package="com.example.hector.EventMan" >
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:theme="@style/Theme.AppCompat.Light"
+        android:icon="@drawable/iad_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:allowBackup="true"
+         >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -28,6 +30,16 @@
         <activity
             android:name=".ShowCounter"
             android:label="@string/title_activity_event_editor"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.hector.EventMan.MainActivity" />
+        </activity>
+        <!-- label="No Events" prevents the activity remaining on the stack -->
+        <activity
+            android:name=".NoEventsExist"
+            android:label="No Events"
+            android:noHistory="true"
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
